@@ -9,3 +9,8 @@ Nov 07 2011 - Added WebServer & WebClient sketches
 
 Jan 29 2012 - Added compatibility with chipKIT Uno32 and Max32 (Max32 using Serial1
               instead of Serial0). This version is experimental.
+
+Feb 5 2012  - Added some debug code to Wirefree.cpp to attempt to see where the
+			  project locks up. Also changes some errors in the #ifdef parts to
+			  identify if it's a chipKIT Max32 or not. Seems to have solved the
+			  issues being seen. Succesfull tests with the LED demo on Max32.
